--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ tools/gnark/main
 tools/gnark/bls12_381/cairo_test/main
 src/hades_binding/target/
 src/hades_binding/Cargo.lock
+src/hades_binding/sys
