--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ venv
 *.html
 tools/gnark/main
 tools/gnark/bls12_381/cairo_test/main
-src/hades_binding/target/
-src/hades_binding/Cargo.lock
-src/hades_binding/sys
+
+tools/hades_binding/target/
+tools/hades_binding/Cargo.lock
+tools/hades_binding/sys
